# nexus

./: .continuation-prompt.md  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  LICENSING.md  README.md  SECURITY.md  pyproject.toml  spec.md
.beads/: .gitignore  interactions.jsonl  issues.jsonl  metadata.json  push-state.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/skills/: release.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  cold-install-rehearsal.yml  engine-service-release.yml  era-hop-mvv.yml  guided-upgrade-mvv.yml  integration.yml  local-service-gate-nightly.yml  pg-bundle-cache-seed.yml  plan-schema-check.yml  release.yml  service-ci.yml
.plans/: rdr-066-plan.md
.pm/: AGENT_INSTRUCTIONS.md  CONTEXT_PROTOCOL.md  CONTINUATION.md  METHODOLOGY.md  PLAN.md  README.md
Formula/: nx.rb
archive/: rdr-110-119-scrapped-chain.MANIFEST.md  rdr-110-119-scrapped-chain.bundle
bench/queries/: abstract-themes.yml  spike_5q.yaml
blog/: publish.py  upload-images.sh
conexus/: .mcp.json  CHANGELOG.md  README.md  registry.yaml  retrieval-agents.txt
conexus/.claude-plugin/: plugin.json
conexus/agents/: architect-planner.md  code-review-expert.md  codebase-deep-analyzer.md  debugger.md  deep-analyst.md  deep-research-synthesizer.md  developer.md  knowledge-tidier.md  plan-auditor.md  plan-enricher.md  strategic-planner.md  substantive-critic.md  test-validator.md
conexus/commands/: analyze-code.md  architecture.md  continuation.md  create-plan.md  debug.md  deep-analysis.md  enrich-plan.md  implement.md  knowledge-tidy.md  nx-preflight.md  pdf-process.md  phase-review-gate.md  plan-audit.md  rdr-accept.md  rdr-audit.md  rdr-close.md  rdr-create.md  rdr-gate.md  rdr-list.md  rdr-research.md  rdr-show.md  research.md  review-code.md  substantive-critique.md  test-validate.md  upgrade.md
conexus/daemon/: com.nexus.service.plist  com.nexus.t2.plist  nexus-service.service  nexus-t2.service  nexus-t3.service
conexus/hooks/: hooks.json
conexus/plans/: dimensions.yml
docs/: README.md  a2ui-summary.md  agentic-cockpit.md  architecture.md  catalog-link-types.md  catalog-purposes.md  catalog.md  cli-reference.md  configuration.md  container-integration.md  contributing.md  desktop-deployment.md  devonthink-scripts.md  devonthink-smart-rules.md  getting-started.md  historical.md  logging.md  managed-onboarding.md  mcp-servers.md  mcp-vs-agents.md  memory-and-tasks.md  metadata-consistency-matrix.md  migration-runbook.md  plan-authoring-guide.md  plan-centric-retrieval.md  privacy-policy.md  project-management.md  querying-guide.md  rdr-nexus-integration.md  rdr-overview.md  rdr-templates.md  rdr-workflow.md  rdr.md  repo-indexing.md  storage-tiers.md  taxonomy.md  tuplespace-env.md  workflow-engine-synthesis.md  xanadu-in-nexus.md
docs/exploration/: a2ui-summary.md  metadata-consistency-matrix.md  taxonomy-projection-tuning.md  workflow-engine-README.md  workflow-engine-brainstorm.md  workflow-engine-with-ext-apps.md  xanadu-in-nexus.md
docs/field-reports/: 2026-04-15-architecture-as-code-from-art.md  2026-05-15-chroma-multiprocess-spike.md
docs/historical/: README.md
docs/integrations/: devonthink-scripts.md
docs/migration/: README.md  rdr-101-e2e-validation.md  rdr-101-live-migration-postmortem.md  rdr-101-phase4-audit-2026-05-02.md  rdr-101-phase4-fire-chains-audit.md  rdr-101-phase4-orphan-recovery.md  rdr-101-phase4-reader-audit.md  rdr-101.md  upgrading-to-4.34.md
docs/operations/: agent-lifecycle.md  audit-membership-interpretation.md  migration-recovery.md  t3-health.md
docs/plans/: 2026-02-23-rdr-workflow-skills-design.md  2026-02-24-smart-repo-indexing-design.md  (+32 more)
dt/: CHANGELOG.md  README.md
mcpb/: .gitignore  .mcpbignore  SPIKE.md  manifest.json  nexus-spike-0.0.1.mcpb  pyproject.toml
mcpb/src/: server.py
nx/: .mcp.json  CHANGELOG.md  README.md  registry.yaml  retrieval-agents.txt
nx-plugin/: README.md  registry.yaml
scripts/: assert_ca3_ran.py  assert_rehearsal_ran.py  assert_rerank_inference_ran.py  assert_write_seam_ran.py  batch-label-taxonomy.py  build_pg_bundle.sh  bundle_sandbox_probe.py  check_engine_release_floor.py  ci_warm_docling.py  colbert_recall_spike.py  colpali_recall_spike.py  cron-rdr-audit.sh  docling_figure_yield_probe.py  gen_rehearsal_hop_manifest.py  liquibase_bundle_smoke.sh  migrate_art_papers.py  p6-clean-run.sh  p6-desktop-profile.sh  rdr-108-je0b-backfill.py  rdr-108-verify.py  rdr-109-calibrate.py  rdr-109-generate-qa.py  rdr092_replay.py  rdr120_p1_mvv.py  rdr120_p2_mvv.py  rdr120_p3_mvv.py  rdr120_stress.sh  rdr_109_salience.py  reinstall-tool.sh  sandbox-t1-uuid.sh  siglip_figure_recall_spike.py  smoke-test-taxonomy.py  validate-rdr-078.sh  vl_augmentation_recall_spike.py
service/: README.md  SECURITY.md  linux-native-verify.sh  native-smoke.sh  pom.xml  trace-native.sh
sn/: .mcp.json  README.md
tests/: AGENTS.md  _daemon_leak_guard.py  _engine_substrate.py  conftest.py  pipeline_fake_engine.py  test_9xfx5_fresh_box_noise.py  test_abstract_themes_plan.py  test_abstract_themes_plan_integration.py  test_activity_stream.py  test_answer.py  test_answer_extended.py  test_aspect_consumer_service_mode.py  test_aspect_drain_protocol.py  test_aspect_extraction_queue.py  test_aspect_extractor.py  test_aspect_extractor_subprocess_isolation.py  test_aspect_promotion.py  test_aspect_readers.py  test_aspect_readers_staleness.py  test_aspect_sql.py  test_aspect_worker.py  test_aspects_consumer_verbs.py  test_aspects_gc_fixtures.py  test_ast_languages.py  test_audit_health_domain_methods.py  test_auto_linker.py  test_b6enc_store_put_ghost_compensation.py  test_backfill_hash.py  test_bench_runner.py  test_bib_enricher.py  test_bib_enricher_openalex.py  test_bib_enricher_write_back_service_mode.py  test_bib_extractor.py  test_bridge_address_fields.py  test_builtin_plans.py  test_c7aj3_service_mode_cred_gates.py  test_campaigns_panel.py  test_catalog.py  test_catalog_audit_membership.py  test_catalog_backfill.py  (+567 more)
(+2004 files in other folders)
