[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conexus"
version = "3.9.0"
description = "Self-hosted semantic search and knowledge management for LLM-driven development"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12,<3.14"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Hal Hildebrand", email = "hellblazer@me.com" }
]
keywords = [
    "semantic-search",
    "knowledge-management",
    "cli",
    "llm",
    "rag",
    "code-search",
    "chromadb",
    "voyage-ai",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "chromadb>=0.6",
    "click>=8.1",
    "llama-index-core==0.12.7",
    "markdown-it-py>=4.0.0",
    "msgpack>=1.0",
    "numpy>=1.24",
    "pymupdf>=1.26.6",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "tqdm>=4.65",
    "tree-sitter-language-pack==0.7.1",
    "voyageai>=0.2",
    "docling>=2.76.0",
    "python-pptx>=1.0.0",
    "opencv-python-headless>=4.0.0",
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.optional-dependencies]
local = ["fastembed>=0.7.0"]
# mineru[all] includes formula + table models (~2-3 GB on first run)
# Models are downloaded on first use, not at install time
# PyPI package "mineru" (v2.0+); import namespace is "mineru"
mineru = ["mineru[all]"]

[project.urls]
Homepage = "https://github.com/Hellblazer/nexus"
Repository = "https://github.com/Hellblazer/nexus"
Documentation = "https://github.com/Hellblazer/nexus/tree/main/docs"
"Bug Tracker" = "https://github.com/Hellblazer/nexus/issues"

[project.scripts]
nx = "nexus.cli:main"
nx-mcp = "nexus.mcp.core:main"
nx-mcp-catalog = "nexus.mcp.catalog:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_level = "WARNING"
markers = [
    "integration: end-to-end tests requiring real services (deselect with '-m not integration')",
    "slow: expensive benchmarks (deselect with '-m not slow')",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "syrupy>=4.0",
    "twine>=6.2.0",
]
