[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conexus"
version = "4.15.0"
description = "Self-hosted semantic search and knowledge management for LLM-driven development"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12,<3.14"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Hal Hildebrand", email = "hellblazer@me.com" }
]
keywords = [
    "semantic-search",
    "knowledge-management",
    "cli",
    "llm",
    "rag",
    "code-search",
    "chromadb",
    "voyage-ai",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "chromadb>=0.6",
    "click>=8.1",
    "llama-index-core==0.12.7",
    "markdown-it-py>=4.0.0",
    "msgpack>=1.0",
    "numpy>=1.24",
    "pymupdf>=1.26.6",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "structlog>=24.0",
    "tqdm>=4.65",
    "tree-sitter-language-pack==0.7.1",
    "voyageai>=0.2",
    "docling>=2.76.0",
    "python-pptx>=1.0.0",
    "opencv-python-headless>=4.0.0",
    "httpx>=0.27",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]",
]

[project.optional-dependencies]
local = ["fastembed>=0.7.0"]
# mineru[all] includes formula + table models (~2-3 GB on first run)
# Models are downloaded on first use, not at install time
# PyPI package "mineru" (v2.0+); import namespace is "mineru"
mineru = ["mineru[all]"]

[project.urls]
Homepage = "https://github.com/Hellblazer/nexus"
Repository = "https://github.com/Hellblazer/nexus"
Documentation = "https://github.com/Hellblazer/nexus/tree/main/docs"
"Bug Tracker" = "https://github.com/Hellblazer/nexus/issues"

[project.scripts]
nx = "nexus.cli:main"
nx-mcp = "nexus.mcp.core:main"
nx-mcp-catalog = "nexus.mcp.catalog:main"
nx-session-end-launcher = "nexus._session_end_launcher:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

# Exclude the editable-install symlink so hatch does not walk into
# it via the packages= directive and then re-add the same files via
# force-include below, which produces a wheel with duplicate local-
# header filenames that PyPI rejects with a 400 "Duplicate filename
# in local headers." The symlink exists for editable installs to
# resolve ``importlib.resources.files('nexus') / '_resources'`` into
# the repo's ``nx/plans`` tree; force-include is the wheel-install
# path. Exactly one of the two should land files into the wheel.
exclude = [
    "src/nexus/_resources",
]

# RDR-092 nexus-b9f3: ship the nx plugin's plan YAMLs as package data
# so installed CLIs can resolve them via ``importlib.resources.files
# ("nexus") / "_resources"``. Without this, ``_seed_plan_templates``
# cannot find ``nx/plans/builtin/*.yml`` from a uv-tool install and
# the Phase 0c fail-loud guard correctly surfaces the deployment gap.
#
# Only ``nx/plans/`` travels. The rest of ``nx/`` (agents, skills,
# commands, hooks, .claude-plugin/plugin.json) is consumed by Claude
# Code from the repo at plugin-install time, not from the Python
# wheel.
[tool.hatch.build.targets.wheel.force-include]
"nx/plans" = "nexus/_resources/plans"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "nx/plans",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_level = "WARNING"
markers = [
    "integration: end-to-end tests requiring real services (deselect with '-m not integration')",
    "slow: expensive benchmarks (deselect with '-m not slow')",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "syrupy>=4.0",
    "twine>=6.2.0",
]
