[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conexus"
version = "5.1.4"
description = "Self-hosted semantic search and knowledge management for LLM-driven development"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12,<3.14"
license = "AGPL-3.0-or-later"
authors = [
    { name = "Hal Hildebrand", email = "hellblazer@me.com" }
]
keywords = [
    "semantic-search",
    "knowledge-management",
    "cli",
    "llm",
    "rag",
    "code-search",
    "chromadb",
    "voyage-ai",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "chromadb>=0.6",
    "click>=8.1",
    "llama-index-core>=0.12.7,<0.15",
    "markdown-it-py>=4.0.0",
    "msgpack>=1.0",
    "numpy>=1.24",
    "pymupdf>=1.26.6",
    "pyyaml>=6.0",
    "scikit-learn>=1.3",
    "structlog>=24.0",
    "tqdm>=4.65",
    # nexus-8g79.20 finding 2026-05-12: tree-sitter-language-pack 1.x
    # is a COMPLETE API rewrite. The 1.x ``Parser`` C-binding (PyO3)
    # exposes no ``parse()`` method; the new flow uses a top-level
    # ``process()`` + ``ProcessResult`` type. Nexus's
    # ``_extract_context`` (code_indexer.py:262) calls
    # ``parser.parse(source)`` directly, so CI fails with
    # "Parser object has no attribute 'parse'". Migration is its own
    # arc — pinned to 0.x for now; tracked as nexus-8g79.35.
    "tree-sitter-language-pack>=0.7.1,<1.0",
    "voyageai>=0.2",
    "docling>=2.76.0",
    "python-pptx>=1.0.0",
    "opencv-python-headless>=4.0.0",
    "httpx>=0.27",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]",
    # RDR-101: UUID7 (RFC 9562) for doc_id and chunk_id surrogate identity.
    # Python 3.14 lands uuid.uuid7() in stdlib; on 3.13 use uuid7-standard
    # (NOT the older "uuid7" package, which uses pre-RFC encoding).
    "uuid7-standard>=1.1.0; python_version<'3.14'",
    # nexus-2fyb: MinerU is the formula-aware PDF extractor required by
    # auto-mode whenever a PDF contains math. Previously gated behind a
    # [mineru] extra; the extras game produced silent formula loss for
    # weeks because fresh installs and reinstall-tool both skipped it.
    # Default-on is the only configuration that doesn't foot-cannon the
    # next install.
    #
    # nexus-8g79.18: pinned to ``mineru[pipeline]`` (not ``mineru[all]``).
    # nexus calls ``mineru.cli.common.do_parse`` with ``backend="pipeline"``
    # in src/nexus/pdf_extractor.py (single call site, see RDR-046). The
    # ``[pipeline]`` extra is exactly the stack that path needs: torch +
    # torchvision + transformers + onnxruntime + a few lightweight extras
    # for the OCR / formula / table models (~2-3 GB downloaded on first
    # use, not at install time).
    #
    # ``[all]`` pulled ``[core]`` (= vlm + pipeline + gradio) plus the
    # platform-specific VLM-inference backend (``mlx-vlm`` on macOS,
    # ``vllm`` on linux, ``lmdeploy`` on windows). None of those are
    # used: nexus never invokes the vlm- backends. The vendored gradio
    # 6.x carried a stale XSS advisory (GHSA-2wxf-49m7-6x5q) and pulled
    # 100+ transitive packages; the platform VLM backends pull boto3,
    # openai, vllm, lmdeploy, cupy. Replacing ``[all]`` with
    # ``[pipeline]`` shaves ~100 packages off a fresh install AND drops
    # the gradio XSS surface. Verified locally: ``do_parse`` succeeds
    # with ``[pipeline]`` only.
    "mineru[pipeline]",
]

[project.optional-dependencies]
local = ["fastembed>=0.7.0"]

[project.urls]
Homepage = "https://github.com/Hellblazer/nexus"
Repository = "https://github.com/Hellblazer/nexus"
Documentation = "https://github.com/Hellblazer/nexus/tree/main/docs"
"Bug Tracker" = "https://github.com/Hellblazer/nexus/issues"

[project.scripts]
nx = "nexus.cli:main"
nx-mcp = "nexus.mcp.core:main"
nx-mcp-catalog = "nexus.mcp.catalog:main"
nx-session-end-launcher = "nexus._session_end_launcher:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus"]

# Exclude the editable-install symlink so hatch does not walk into
# it via the packages= directive and then re-add the same files via
# force-include below, which produces a wheel with duplicate local-
# header filenames that PyPI rejects with a 400 "Duplicate filename
# in local headers." The symlink exists for editable installs to
# resolve ``importlib.resources.files('nexus') / '_resources'`` into
# the repo's ``conexus/plans`` tree; force-include is the wheel-install
# path. Exactly one of the two should land files into the wheel.
exclude = [
    "src/nexus/_resources",
]

# RDR-092 nexus-b9f3: ship the conexus plugin's plan YAMLs as package data
# so installed CLIs can resolve them via ``importlib.resources.files
# ("nexus") / "_resources"``. Without this, ``_seed_plan_templates``
# cannot find ``conexus/plans/builtin/*.yml`` from a uv-tool install and
# the Phase 0c fail-loud guard correctly surfaces the deployment gap.
#
# Only ``conexus/plans/`` travels. The rest of ``conexus/`` (agents, skills,
# commands, hooks, .claude-plugin/plugin.json) is consumed by Claude
# Code from the repo at plugin-install time, not from the Python
# wheel.
[tool.hatch.build.targets.wheel.force-include]
"conexus/plans" = "nexus/_resources/plans"
# nexus-tv5u: ship DT-side AppleScripts as package data so
# ``nx dt install-scripts`` can resolve them via
# ``importlib.resources.files("nexus") / "_resources" / "dt-scripts"``
# from a uv-tool / pipx / Homebrew install. Editable installs use a
# ``src/nexus/_resources/dt-scripts`` symlink back into ``dt/scripts``.
"dt/scripts" = "nexus/_resources/dt-scripts"
# RDR-120 nexus-41unl: ship launchd plist + systemd unit templates so
# ``nx daemon t3 install --autostart`` can resolve them via
# ``importlib.resources.files("nexus") / "_resources" / "daemon"``.
# Editable installs use a ``src/nexus/_resources/daemon`` symlink back
# into ``conexus/daemon``.
"conexus/daemon" = "nexus/_resources/daemon"

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "conexus/plans",
    "conexus/daemon",
    "dt/scripts",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]
log_level = "WARNING"
# Honour the documented default: integration / slow tests are opt-in.
# Without this, ``pytest tests/`` runs everything including
# ``tests/integration/test_nx_answer_equivalence.py`` which calls real
# Voyage / Chroma APIs in retry loops without credentials and hangs
# pytest indefinitely (239+ CLOSE_WAIT TCP sockets observed locally).
# Run them explicitly with ``pytest -m integration`` or ``-m slow``.
addopts = "-m 'not integration and not slow and not stress'"
markers = [
    "integration: end-to-end tests requiring real services (deselect with '-m not integration')",
    "slow: expensive benchmarks (deselect with '-m not slow')",
    "stress: RDR-120 stress harness scenarios (run with 'pytest -m stress')",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=7.0.0",
    "syrupy>=4.0",
    "twine>=6.2.0",
]
